fixed margin and padding spacing on each article

--- a/app/assets/scss/_main.scss
+++ b/app/assets/scss/_main.scss
@@ -1427,10 +1427,10 @@ post grid
     margin: 22px 0;
 }
 
-.post-list .post-content {
-    padding: 0 20px 0 0;
-    overflow: hidden;
-}
+//.post-list .post-content {
+//    padding: 0 20px 0 0;
+//    overflow: hidden;
+//}
 
 
 /*==========
